Quorum3/Library/Tests/Expressions/Pass/GetCharacterParameterText.quorum
class Main
    action Main
        text a = "howdy"
        text max = Test(a)
        output a = "h"
    end

    action Test(text a) returns text
        text returnMe = a:GetCharacter(0)
        return returnMe
    end
end