Quorum3/Library/Tests/Expressions/Fail/MissingActionParen.quorum
class Main
    action Main
        integer bar = Foo(0)
    end
    action Foo(integer a returns integer
        return a
    end
end